chore: complete deployment preparation for Render + Supabase PostgreSQL